Add CSS for search.html

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "watch": "gulp dev",
+    "dev": "gulp dev",
     "css": "gulp css"
   },
   "repository": {
