--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/register": "^7.12.10",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "autoprefixer": "^10.2.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
