--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ Django==2.2.5
 django-countries==7.0
 django-dotenv==1.4.2
 django-seed==0.2.2
-Faker==5.7.0
+django-storages==1.11.1
+Faker==6.0.0
 flake8==3.8.4
 idna==2.10
 mccabe==0.6.1
@@ -17,7 +18,7 @@ Pillow==8.1.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
 python-dateutil==2.8.1
-pytz==2020.5
+pytz==2021.1
 regex==2020.11.13
 requests==2.25.1
 six==1.15.0
@@ -26,4 +27,4 @@ text-unidecode==1.3
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.2
+urllib3==1.26.3
