--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.4
 black==20.8b1
+boto3==1.17.3
+botocore==1.20.3
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
@@ -11,6 +13,7 @@ django-storages==1.11.1
 Faker==6.0.0
 flake8==3.8.4
 idna==2.10
+jmespath==0.10.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
@@ -21,6 +24,7 @@ python-dateutil==2.8.1
 pytz==2021.1
 regex==2020.11.13
 requests==2.25.1
+s3transfer==0.3.4
 six==1.15.0
 sqlparse==0.4.1
 text-unidecode==1.3
